# hpcexercise

./: .gitignore  .gitmodules  README.md
eml06/Ex02/template/template/: exercise02_template.py  run_via_sbatch.sh
gpu01/Ex2/2_1/: Makefile  ex2.sh  ex2_out.txt  plot_data.py
gpu01/Ex2/2_1/inc/: chTimer.h
gpu01/Ex2/2_1/src/: nullKernelAsync.cu
gpu01/Ex2/2_2/: Makefile  ex2.sh  ex2_2.cu  old2x2_2.cu  slurm.err  slurm.out  submit_gpu.sh  test
gpu01/Ex2/2_3/: Makefile  ex2_3  ex2_3.cu  ex2_3.sh  test.exp  test.lib
gpu01/Ex2/Ex2.3/: Makefile  ex2.sh  ex2_out.txt
gpu01/Ex2/Leandro/: a.out  ex2_3.cu  ex2_3.sh
gpu01/Ex2/template/: Makefile  ex2.sh
gpu01/Ex3/3_1/: Makefile  a.out  ex3_1.sh  main.cu
gpu01/Ex3/3_2-4/: Makefile  ex3_2-4.sh  plot_data.py  slurm.err  slurm.out
gpu01/Ex4/4_2/: CMakeLists.txt  Makefile  Untitled-1.ipynb  bench.sh  centralized_out_g2s_4_2_1.txt  centralized_out_r2s_4_2_1.txt  centralized_out_s2g_4_2_1.txt  centralized_out_s2r_4_2_1.txt  centralized_out_sm70_g2s_4_2_1.txt  centralized_out_sm70_g2s_4_2_1_block.txt  centralized_out_sm70_g2s_4_2_1_power10.txt  centralized_out_sm70_r2s_4_2_1.txt  centralized_out_sm70_r2s_4_2_1_block.txt  centralized_out_sm70_r2s_4_2_1_power10.txt  centralized_out_sm70_s2g_4_2_1.txt  centralized_out_sm70_s2g_4_2_1_block.txt  centralized_out_sm70_s2g_4_2_1_power10.txt  centralized_out_sm70_s2r_4_2_1.txt  centralized_out_sm70_s2r_4_2_1_power10.txt  load_modules.sh
gpu01/Ex4/4_2/florian/: CMakeLists.txt  Makefile  centralized_out4_2_1.txt  centralized_out4_2_2.txt  centralized_out4_2_3.txt  centralized_out4_2_4.txt  plot4_2_1.py  submit_4_2_1.sh  submit_4_2_2 copy 3.sh  submit_4_2_3.sh
gpu01/Ex4/4_2/florian/src/: kernel.cu  main.cpp
gpu01/Ex4/4_2/src/: kernel.cu  main.cpp
gpu01/Ex4/4_3/: Makefile  meas_vals.txt  submit.sh
gpu01/Ex4/4_4/: 4.4.sh  4_4.c  4_4_2.c  plot.ipynb  readme  runtimes.csv
gpu01/Ex5/5_2/: ex5_2.sh  output_5_2_2.txt
gpu01/Ex5/5_3/: Makefile  ex5_3.sh  out_5_3_2.txt  out_5_3_3.txt
gpu01/Ex5/5_4/: readme.md
gpu01/Ex6/6_2/: 6_2.c  Makefile  a.out  job.sh  readme.md
gpu01/Ex6/6_3/: Makefile  report_10M_naive_gpu.qdrep  report_10M_naive_gpu_ncu.ncu-rep  report_10M_naive_gpu_ncu_all_sections.ncu-rep  report_6_3.qdrep  submit.sh
gpu01/Ex6/6_4/: submit.sh
gpu01/Ex6/6_5/: Makefile  draw_char.py  slurm.out  submit.sh
gpu01/Ex6/6_6/: Makefile  plot.py  report_thrust.qdrep
gpu01/Ex6/template/: Makefile
gpu01/Ex7/7_1/: Makefile  submit.sh
gpu01/Ex7/7_2/: submit.sh
gpu01/Ex7/7_4/: 7-4.cu  job.sh  readme
gpu01/Ex8/8_1/: Makefile  submit.sh  times.txt
gpu01/Ex8/8_2/: Makefile  gameoflife_ncu.ncu-rep  report1.qdrep  report1.sqlite  submit.sh  times.txt
gpu01/Ex8/8_3/: 1.out  submit.sh  times_cache.txt  vector_gang_times.txt
gpu01/Ex8/template_acc/: Makefile
gpu01/General Purpose Snippets/: Makefile
hpc01/: submit_hpc.sh
hpc01/Ex2/: test123.txt
hpc01/Ex2/2_1/: Ex2_2cyclic.sh  Makefile  bench_10cores_run__block.out  bench_10cores_run__cyclic.out  bench_12cores_run_.out  bench_12cores_run__block.out  bench_12cores_run__cyclic.out  bench_14cores_run_.out  bench_14cores_run__block.out  bench_16cores_run__cyclic.out  bench_18cores_run_.out  bench_20cores_run_.out  bench_20cores_run__block.out  bench_20cores_run__cyclic.out  bench_22cores_run_.out  bench_22cores_run__block.out  bench_24cores_run_.out  bench_26cores_run_.out  bench_28cores_run_.out  bench_28cores_run__block.out  bench_28cores_run__cyclic.out  bench_2cores_run__cyclic.out  bench_30cores_run__block.out  bench_32cores_run_.out  bench_32cores_run__block.out  bench_4cores_run__block.out  bench_4cores_run__cyclic.out  bench_6cores_run_.out  bench_6cores_run__block.out  bench_8cores_run_.out  bench_8cores_run__block.out  bench_8cores_run__cyclic.out
hpc01/Ex2/2_2/: Makefile  main
hpc01/Ex2/2_3/: 1clus_block.txt  2clus_block.txt  2clus_nblock.txt  Makefile  ex2_3.sh  plot_data.py
hpc01/Ex2/2_4/: Makefile  ex2_4.sh  main.c
hpc01/Ex3/3_2/: ex3_2.sh  main.c  makefile
hpc01/Ex3/3_3-5/: ex3_3-5.sh  ex_3_3-5.sh  load_modules.sh  main.c  makefile
hpc01/Ex4/4_2/: Makefile  main.c  slurm.out  submit.sh
hpc01/Ex5/5.1/: CMakeLists.txt  data10.txt  data12.txt  data2.txt  data4.txt  data6.txt  data8.txt  ex5_1.sh  makefile
hpc01/Ex5/5.1/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  programm
hpc01/Ex5/5.1/src/: main.cpp
hpc01/Ex7/7_2/: CMakeLists.txt  Makefile  ex7_2.sh  main.cpp  nBody.err  onecore.csv  plot_data.py  slurm.out
hpc01/Ex7/7_2/src/: main.cpp  main_flo.cpp
hpc01/Ex8/: cifr10_tutorial.py  cifr_template.py  cpu_train.csv  environment.yaml  gpu_train.csv  plot_results.py  submit.sh
hpc01/Exercise_2/2_1/: Ex2_2.sh  Ex2_2block.sh  bench.sh  bench_10cores_run_.out  bench_10cores_run__block.out  bench_10cores_run__cyclic.out  bench_12cores_run_.out  bench_12cores_run__block.out  bench_12cores_run__cyclic.out  bench_14cores_run_.out  bench_14cores_run__block.out  bench_14cores_run__cyclic.out  bench_16cores_run_.out  bench_16cores_run__block.out  bench_16cores_run__cyclic.out  bench_18cores_run_.out  bench_18cores_run__block.out  bench_18cores_run__cyclic.out  bench_20cores_run_.out  bench_20cores_run__block.out  bench_20cores_run__cyclic.out  bench_22cores_run_.out  bench_22cores_run__block.out  bench_22cores_run__cyclic.out  bench_24cores_run_.out  bench_24cores_run__block.out  bench_24cores_run__cyclic.out  bench_26cores_run_.out  bench_26cores_run__block.out  bench_26cores_run__cyclic.out  bench_28cores_run_.out  bench_28cores_run__block.out  bench_28cores_run__cyclic.out  bench_2cores_run_.out  bench_2cores_run__block.out  bench_2cores_run__cyclic.out  bench_30cores_run_.out  bench_30cores_run__block.out  bench_30cores_run__cyclic.out  bench_32cores_run_.out  (+15 more)
hpc01/Exercise_2/2_2/: Makefile  ex2_2.sh  main.c  slurm.err  slurm.out  slurm2.err  slurm2.out
hpc01/Exercise_2/2_3/: 1clus_nblock.txt  Makefile  ex2_3.sh  main.c  plot_data.py
hpc01/Exercise_2/2_4/: Makefile  ex2_4.sh  main.c  slurm.out
(+58 files in other folders)
